--- a/join.html
+++ b/join.html
@@ -73,11 +73,11 @@
       <b>
         Postdocs.
       </b>
-      We will recruit multiple 1-3 year postdocs in 2021, 2022, and 2023 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
+      We will recruit multiple postdocs in 2022, 2023, and 2024 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
       If interested please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
     </b>
     <p>
-      <b>DPhil/PhD students.</b>
+      <b>PhD/DPhil students.</b>
       We are looking for enthusiastic students.
       Please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us if interested.
       Information on applying to the Oxford DPhil program for Computer Science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
