--- a/people.html
+++ b/people.html
@@ -71,13 +71,13 @@
       <hr>
 
     <div class="center">
-      <p>
+      <div>
         <a href="http://www.andrewcropper.com">Andrew Cropper</a>
-      </p>
+      </div>
       <div>
         <img src="https://www.cs.ox.ac.uk/files/10552//4k8EnmzY_400x400.jpg" height="175">
       </div>
-        <p>Group Leader</p>
+        <div>Group Leader</div>
     </div>
     <hr>
 
@@ -86,7 +86,7 @@
         <a href="https://scholar.google.com/citations?user=UanFJEsAAAAJ&hl=en">C&eacute;line Hocquette</a>
       </div>
       <div>
-        <!-- <img src="https://www.cs.ox.ac.uk/files/10552//4k8EnmzY_400x400.jpg" height="175"> -->
+        <img src="https://i1.rgstatic.net/ii/profile.image/586703681110016-1516892466580_Q512/Celine-Hocquette.jpg" height="175">
       </div>
       <div>
         Postdoc
@@ -95,13 +95,13 @@
     <hr>
 
     <div class="center">
-      <p>
+      <div>
         <a href="<a href="https://scholar.google.com/citations?user=KiCL7SoAAAAJ&hl=en>Rolf Morel</a>
-      </p>
-      <p>
+      </div>
+      <div>
         <img src="https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=KiCL7SoAAAAJ&citpid=1" height="175">
-      </p>
-      <p>DPhil student</p>
+      </div>
+      <div>DPhil student</div>
         <div>Thesis:
         <a href="https://www.aaai.org/AAAI21Papers/DC-317.MorelR.pdf">Constraint-Driven Learning of Logic Programs</a>
         </div>
