--- a/people.html
+++ b/people.html
@@ -77,7 +77,8 @@
       <div>
         <img src="https://www.cs.ox.ac.uk/files/10552//4k8EnmzY_400x400.jpg" height="175">
       </div>
-        <div>Group Leader</div>
+        <div>Group Leader
+        </div>
     </div>
     <hr>
 
@@ -110,7 +111,17 @@
 
     <div class="center">
       <p>
-        Brad Hunter. MSc student
+
+        <div>
+        Brad Hunter
+      </div>
+      <div>
+        <img src="https://avatars.githubusercontent.com/u/1540721?v=4" height="175">
+      </div>
+        <div> MSc student
+        </div>
+
+
       </p>
     </div>
 
@@ -123,11 +134,10 @@
     </div>
 
     <hr>
-
     <div class="center">
-      <p>
-        John Wahlig. MSc student
-      </p>
+    <div>John Wahlig</div>
+    <div><img src="https://avatars.githubusercontent.com/u/26451825?v=4" height="175"></div>
+    <div> MSc student</div>
     </div>
 
     <hr>
