--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
 <div>[1] Inductive logic programming at 30: a new introduction. A. Cropper and S. Dumančić.</div>
 <div>[2] Turning 30: new ideas in inductive logic programming. A. Cropper, S. Dumančić, and S.H. Muggleton. IJCAI 2020</div>
 
---------------------------------------------------
+<hr>
 
 <div><b>Title</b>: Efficiently learning efficient programs</div>
 <div><b>Suitability</b>: 4th/MSc</div>
@@ -110,7 +110,7 @@
 <div>[2] Learning efficient logic programs  A. Cropper and S.H. Muggleton  Machine learning 2019 </div>
 
 
---------------------------------------------------
+<hr>
 
 <div><b>Title</b>: Learning programs by decomposing examples
 <div><b>Suitability</b>: MSc</div>
@@ -123,7 +123,7 @@
 <div>[1] Inductive logic programming at 30: a new introduction. A. Cropper and S. Dumančić.</div>
 <div>[2] Turning 30: new ideas in inductive logic programming. A. Cropper, S. Dumančić, and S.H. Muggleton. IJCAI 2020</div>
 
---------------------------------------------------
+<hr>
 
 <div><b>Title</b>: What's relevant when automatically building programs?</div>
 <div><b>Suitability</b>: MSc</div>
@@ -135,9 +135,28 @@
 <div>[1] Inductive logic programming at 30: a new introduction. A. Cropper and S. Dumančić.</div>
 <div>[2] Turning 30: new ideas in inductive logic programming. A. Cropper, S. Dumančić, and S.H. Muggleton. IJCAI 2020</div>
 
---------------------------------------------------
+<hr>
 
-<div><b>Title</b>: Solving Bongard problems</div>
+
+
+
+<div><b>Title</b>: Learning programs with long chains of reasoning</div>
+<div><b>Suitability</b>: Part C, MSc</div>
+
+<div><b>Abstract</b>:  A major challenge in inductive logic programming (ILP) [1] is learning large programs with deep reasoning (i.e. requires long chains of inference). A recent paper [2] addressed this limitation by replacing traditional entailment approaches in ILP with example-dependent loss functions to help guide the search. The approach is called Brute and uses a best-first search, guided by an example-dependent loss function, to incrementally build programs. The approach has two key limitations (i) it is a brute force approach that tries every possible program, and (ii) it only uses a best-first search. The goal of this project is to address these two limitations by (i) replacing the brute-force approach with a powerful learning from failures [3] search technique, and (ii) using other search algorithms, such as A*.
+
+<div><b>Prerequisites</b>: Familiarity with Python is very useful. Logic programming (preferably Datalog/Prolog/answer set programming) would help a lot.</div>
+
+<div>[1] Inductive logic programming at 30: a new introduction. A. Cropper and S. Dumančić.</div>
+<div>[2] Andrew Cropper, Sebastijan Dumancic: Learning Large Logic Programs By Going Beyond Entailment. IJCAI 2020: 2073-2079</div>
+<div> [3] Andrew Cropper, Rolf Morel:
+Learning programs by learning from failures. Mach. Learn. 110(4): 801-856 (2021) </div>
+
+
+<hr>
+
+
+<div><b>Title</b>: Learning to solve Bongard problems</div>
 <div><b>Suitability</b>: Part B, Part C, MSc</div>
 
 <div><b>Abstract</b>:  The Bongard problems are a style of pattern recognition problems. There are always 12 images. Six positive examples and six negative examples. The goal is to induce a rule (or a set of rules) to explain the pattern. See [3] for a light introduction. The goal of this project is to apply state-of-the-art inductive logic programming (ILP) [1,2] to Bongard problems. ILP is a form of machine learning based on mathematical logic. Given examples and background knowledge (BK), the goal of ILP is to induce a logic program (a set of logical rules) that with the BK generalises the examples. The challenge is to adapt or revise the existing approaches to these problems. The work is mostly implementation and experimentation.</div>
@@ -148,7 +167,7 @@
 <div>[2] Turning 30: new ideas in inductive logic programming. A. Cropper, S. Dumančić, and S.H. Muggleton. IJCAI 2020</div>
 <div [3] https://www.theguardian.com/science/2016/apr/25/can-you-solve-it-bongard-picture-puzzles-that-will-bongo-with-your-brain>
 
---------------------------------------------------
+<hr>
 
 <div><b>Title</b>: Learning programs with new objects</div>
 <div><b>Suitability</b>: MSc</div>
@@ -160,7 +179,7 @@
 <div>[1] Inductive logic programming at 30: a new introduction. A. Cropper and S. Dumančić.</div>
 <div>[2] Turning 30: new ideas in inductive logic programming. A. Cropper, S. Dumančić, and S.H. Muggleton. IJCAI 2020</div>
 
-----------
+<hr>
 
 <div><b>Title</b>: Optimal inverse entailment
 <div><b>Suitability</b>: MSc</div>
