--- a/index.html
+++ b/index.html
@@ -157,7 +157,14 @@
 
     <ol>
 
-
+      <li>
+        <a href="https://arxiv.org/pdf/2109.07818.pdf"><b>
+        Learning logic programs through divide, constrain, and conquer.</b></a>
+        <br>
+        A. Cropper
+        <br>
+        AAAI 2022
+      </li>
 
       <li>
         <a href="https://arxiv.org/abs/2004.09931"><b>Knowledge refactoring for inductive program synthesis</b></a>
