--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
       body{
         font-family: 'Roboto', sans-serif;
-        font-size:16pt;
-        line-height: 1.6;
+        font-size:14pt;
+        line-height: 1.4;
       }
 
       a:link, a:visited {
@@ -44,14 +44,14 @@
     </style>
 
 
-    <title>Logic and Learning lab</title>
+    <title>Logic and Learning</title>
   </head>
 
   <body>
     <div class="container">
       <div class="center">
         <div>
-          <span class="title">Logic and Learning lab</span>
+          <span class="title">Logic and Learning</span>
         </div>
         <img src="imgs/logo.jpg" width="200">
         <p>
@@ -65,15 +65,16 @@
       <hr>
 
       <p>
-        The Logic and Learning (LOL) lab is in the computer science department at the University of Oxford.
-        We work on program synthesis: using machine learning to write computer programs.
-        We focus on <b><a href="https://arxiv.org/pdf/2008.07912.pdf">inductive logic programming</a></b> (ILP), which combines logic and machine learning.
+        The Logic and Learning (LOL) group is in the computer science department at the University of Oxford.
+        <!-- We work on program synthesis: using machine learning to write computer programs. -->
+        We work on logic and machine learning, i.e. <a href="https://arxiv.org/pdf/2008.07912.pdf">inductive logic programming</a> (ILP).
         We maintain the ILP system <a href="
-        https://github.com/logic-and-learning-lab/Popper"><b>Popper</b></a>.
+        https://github.com/logic-and-learning-lab/Popper">Popper</a>.
       </p>
 
         <p>
-        We will recruit multiple postdocs in 2022, 2023, and 2024 to work on the EPSRC-funded project <b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b>.
+        <b>We will recruit multiple postdocs in 2022, 2023, and 2024 to work on the <a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b> project.
+        We are looking for at least one expert in <i>constraint satisfaction problems </i> (SAT/ASP/CP).
         If interested, please see the <a href="join.html">join</a> page.
       </p>
 
@@ -159,7 +160,7 @@
 
       <li>
         <a href="https://arxiv.org/pdf/2109.07818.pdf"><b>
-        Learning logic programs through divide, constrain, and conquer.</b></a>
+        Learning logic programs through divide, constrain, and conquer</b></a>
         <br>
         A. Cropper
         <br>
