--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,8 @@
 
       body{
         font-family: 'Roboto', sans-serif;
-        font-size:16pt;
-        line-height: 1.6;
+        font-size:14pt;
+        line-height: 1.4;
       }
 
       a:link, a:visited {
@@ -51,13 +51,13 @@
     </style>
 
 
-    <title>Logic & Learning lab</title>
+    <title>LoL group</title>
   </head>
   <body>
     <div class="container">
       <div class="center">
         <div>
-          <span class="title">Logic and Learning lab</span>
+          <span class="title">LoL group</span>
         </div>
         <img src="imgs/logo.jpg" width="200">
         <p>
