--- a/join.html
+++ b/join.html
@@ -12,8 +12,8 @@
 
       body{
         font-family: 'Roboto', sans-serif;
-        font-size:16pt;
-        line-height: 1.6;
+        font-size:14pt;
+        line-height: 1.4;
       }
 
       a:link, a:visited {
@@ -51,13 +51,13 @@
     </style>
 
 
-    <title>Logic & Learning lab</title>
+    <title>Logic & Learning</title>
   </head>
   <body>
     <div class="container">
       <div class="center">
         <div>
-          <span class="title">Logic and Learning lab</span>
+          <span class="title">Logic and Learning</span>
         </div>
         <img src="imgs/logo.jpg" width="200">
         <p>
@@ -73,19 +73,19 @@
       <b>
         Postdocs.
       </b>
-      We will recruit multiple postdocs in 2022, 2023, and 2024 to work on the EPSRC-funded project <i><b><a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b></i>.
-      If interested please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
+        We will recruit multiple postdocs in 2022, 2023, and 2024 to work on the <a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a> project.
+        We are looking for at least one expert in <i>constraint satisfaction problems </i> (SAT/ASP/CP).
+      If interested please email <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">Andrew Cropper</a>.
     </b>
     <p>
       <b>PhD/DPhil students.</b>
-      We are looking for enthusiastic students.
-      Please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us if interested.
-      Information on applying to the Oxford DPhil program for Computer Science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
+      If interested in studying for a PhD/DPhil, please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
+      Information on to the Oxford DPhil program for computer science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
     </p>
 
     <p>
-      <b>Student projects</b>
-      We are happy to supervise 3rd/4th year and MSc student projects.
+      <b>Student projects.</b>
+      We are happy to supervise student projects.
       Some project descriptions are available <a href="http://www.cs.ox.ac.uk/teaching/courses/projects/">here</a> and
       <a href="projects.html">here</a>.
       If interested, <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
