--- a/people.html
+++ b/people.html
@@ -12,8 +12,8 @@
 
       body{
         font-family: 'Roboto', sans-serif;
-        font-size:16pt;
-        line-height: 1.6;
+        font-size:14pt;
+        line-height: 1.4;
       }
 
       a:link, a:visited {
@@ -51,13 +51,13 @@
     </style>
 
 
-    <title>Logic & Learning lab</title>
+    <title>LoL</title>
   </head>
   <body>
     <div class="container" class="center">
       <div class="center">
         <div>
-          <span class="title">Logic and Learning lab</span>
+          <span class="title">Logic and Learning</span>
         </div>
         <img src="imgs/logo.jpg" width="200">
         <p>
@@ -127,13 +127,13 @@
 
     <hr>
 
-    <div class="center">
+<!--     <div class="center">
       <p>
         Mathias Jackermeier. MSc student
       </p>
-    </div>
+    </div> -->
+    <!-- <hr> -->
 
-    <hr>
     <div class="center">
     <div>John Wahlig</div>
     <div><img src="https://avatars.githubusercontent.com/u/26451825?v=4" height="175"></div>
