--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
         https://github.com/logic-and-learning-lab/Popper">Popper</a>.
       </p>
 
+      <p><b>We are looking for DPhil (PhD) students to join in the Autumn of 2022/2023.</b>
+          If interested, please see the <a href="join.html">join</a> page.
+      </p>
+
         <p>
         <b>We will recruit multiple postdocs in 2022, 2023, and 2024 to work on the <a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b> project.
         We are looking for at least one expert in <i>constraint satisfaction problems </i> (SAT/ASP/CP).
