--- a/join.html
+++ b/join.html
@@ -105,11 +105,15 @@
       </li>
 
       <li>John Wahlig, MSc,
+        <a href="https://arxiv.org/pdf/2201.03702.pdf">
         Learning logic programs from noisy failures
+        </a>
       </li>
 
       <li>Brad Hunter, MSc,
-        Preprocessing in inductive logic programming
+        <a href="https://arxiv.org/pdf/2112.12551.pdf">
+          Preprocessing in inductive logic programming
+        </a>
       </li>
 
       <li>Cristian Dinu, BA,
