--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <br>
         A. Cropper, S. Dumančić, R. Evans, and S.H. Muggleton
         <br>
-        Machine learning 2021.
+        Machine learning 2022
       </li>
 
       <li>
@@ -101,7 +101,7 @@
         <br>
         A. Cropper and R. Morel
         <br>
-        Machine learning 2021.
+        Machine learning 2021
         <br>
         <!-- <a href="http://andrewcropper.com/slides/2019-ilp19-iggp.pdf">slides</a> -->
         <!-- <a href="https://github.com/andrewcropper/mlj19-iggp">code</a> -->
