--- a/index.html
+++ b/index.html
@@ -68,25 +68,36 @@
         The Logic and Learning (LOL) group is in the computer science department at the University of Oxford.
         <!-- We work on program synthesis: using machine learning to write computer programs. -->
         We work on logic and machine learning, i.e. <a href="https://arxiv.org/pdf/2008.07912.pdf">inductive logic programming</a> (ILP).
-        We maintain the ILP system <a href="
+        We develop the ILP system <a href="
         https://github.com/logic-and-learning-lab/Popper">Popper</a>.
       </p>
 
-      <p><b>We are looking for DPhil (PhD) students to join in the Autumn of 2022/2023.</b>
-          If interested, please see the <a href="join.html">join</a> page.
-      </p>
-
         <p>
-        <b>We will recruit multiple postdocs in 2022, 2023, and 2024 to work on the <a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a></b> project.
+        We are <b>recruiting multiple postdocs</b> to start in 2022, 2023, and 2024 to work on the <a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a> project.
         We are looking for at least one expert in <i>constraint satisfaction problems </i> (SAT/ASP/CP).
         If interested, please see the <a href="join.html">join</a> page.
       </p>
+
+      <p>We also are looking for DPhil (PhD) students to join in the Autumn of 2023.
+          If interested, please see the <a href="join.html">join</a> page.
+      </p>
+
+
+
 
       <hr>
       <p><b>Publications</b></p>
 
       <p>Journals</p>
     <ol>
+
+      <li>
+        <a href="https://arxiv.org/abs/2008.07912.pdf"><b>Inductive logic programming at 30: a new introduction</b></a>
+        <br>
+        A. Cropper and S. Dumančić.
+        <br>
+        JAIR 2022
+      </li>
 
       <li>
         <a href="https://arxiv.org/pdf/2102.10556.pdf"><b>Inductive logic programming at 30</b></a>
@@ -360,15 +371,39 @@
       </li>
     </ol>
 
-    <p>Others</p>
+  <p>Others</p>
     <ol>
 
       <li>
-        <a href="https://arxiv.org/abs/2008.07912.pdf"><b>Inductive logic programming at 30: a new introduction</b></a>
+        <a href="https://arxiv.org/pdf/2102.12551.pdf"><b>Learning logic programs by explaining failures</b></a>
         <br>
-        A. Cropper and S. Dumančić.
+        R. Morel and A. Cropper
         <br>
-        Under review.
+        <!-- Under review. -->
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/2104.14426.pdf"><b>Predicate invention by learning from failures</b></a>
+        <br>
+        A. Cropper and R. Morel
+        <br>
+        <!-- Under review. -->
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/2102.12551.pdf"><b>Parallel constraint-driven inductive logic programming</b></a>
+        <br>
+        A. Cropper, O. Oghenejokpeme, C. Dinu, and R. Morel
+        <br>
+        <!-- Under review. -->
+      </li>
+
+      <li>
+        <a href="https://arxiv.org/pdf/2202.09806.pdf"><b>Learning logic programs by discovering where not to search</b></a>
+        <br>
+        A. Cropper and C. Hocquette
+        <br>
+        <!-- Under review. -->
       </li>
 
     </ol>
