--- a/people.html
+++ b/people.html
@@ -84,7 +84,7 @@
 
     <div class="center">
       <div>
-        <a href="https://scholar.google.com/citations?user=UanFJEsAAAAJ&hl=en">C&eacute;line Hocquette</a>
+        <a href="https://www.doc.ic.ac.uk/~cmh16/">C&eacute;line Hocquette</a>
       </div>
       <div>
         <img src="https://i1.rgstatic.net/ii/profile.image/586703681110016-1516892466580_Q512/Celine-Hocquette.jpg" height="175">
@@ -109,7 +109,7 @@
     </div>
     <hr>
 
-    <div class="center">
+    <!-- <div class="center">
       <p>
 
         <div>
@@ -132,7 +132,7 @@
     <div><img src="https://avatars.githubusercontent.com/u/26451825?v=4" height="175"></div>
     <div> MSc student</div>
     </div>
-
+ -->
    <!--  <hr>
 
     <div class="center">
