--- a/join.html
+++ b/join.html
@@ -73,14 +73,15 @@
       <b>
         Postdocs.
       </b>
-        We will recruit multiple postdocs in 2022, 2023, and 2024 to work on the <a href="http://www.autocs.co.uk">The Automatic Computer Scientist</a> project.
-        We are looking for at least one expert in <i>constraint satisfaction problems </i> (SAT/ASP/CP).
+        We are hiring multiple postdocs to work on the <a href="http://www.autocs.co.uk">Automatic Computer Scientist</a> project.
+        The positions are available for 1-3 years.
+        We are looking for experts either in inductive logic programming or constraint programming (SAT/SMT/ASP/CP).
       If interested please email <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">Andrew Cropper</a>.
     </b>
     <p>
       <b>PhD/DPhil students.</b>
       If interested in studying for a PhD/DPhil, please <a href="mailto:andrew.cropper@cs.ox.ac.uk" "="">email</a> us.
-      Information on to the Oxford DPhil program for computer science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
+      Information on the Oxford DPhil program for computer science is available <a href="https://www.ox.ac.uk/admissions/graduate/courses/dphil-computer-science">here</a>.
     </p>
 
     <p>
@@ -92,16 +93,18 @@
       Previous student projects are listed below.
       <ul>
 
+      <li>Bogdan Cretu, BA,
+        <a href="https://arxiv.org/pdf/2208.11656.pdf">
+          Constraint-driven multi-task learning
+        </a>
+      </li>
+
       <li>Cristian Dinu, BA,
         Overcoming the language bias nightmare in inductive logic programming
       </li>
 
       <li>Victor Vasiesiu, BA,
         Inductive general game playing
-      </li>
-
-      <li>Bogdan Cretu, BA,
-        Constraint-driven multi-task learning
       </li>
 
       <li>John Wahlig, MSc,
@@ -122,8 +125,7 @@
 
       <li>Andrei Diaconu, BA,
         <a href="https://arxiv.org/pdf/2011.08881.pdf">
-        Learning functional programs with function invention and
-reuse
+        Learning functional programs with function invention and reuse
         </a>
       </li>
       <li>Alastair Flynn, BA,
