--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
     <ol>
 
       <li>
+        <a href="https://arxiv.org/pdf/2208.03238.pdf"><b>Learning programs with magic values</b></a>
+        <br>
+        C. Hocquette and A. Cropper
+        <br>
+        Machine learning 2022
+      </li>
+
+      <li>
         <a href="https://arxiv.org/abs/2008.07912.pdf"><b>Inductive logic programming at 30: a new introduction</b></a>
         <br>
         A. Cropper and S. Dumančić.
