--- a/index.html
+++ b/index.html
@@ -182,6 +182,22 @@
     <ol>
 
       <li>
+        <a href="https://arxiv.org/pdf/2210.00764.pdf"><b>Relational program synthesis with numerical reasoning</b></a>
+        <br>
+        C. Hocquette and A. Cropper
+        <br>
+        AAAI 2023
+      </li>
+
+  <li>
+        <a href="https://arxiv.org/pdf/2202.09806.pdf"><b>Learning logic programs by discovering where not to search</b></a>
+        <br>
+        A. Cropper and C. Hocquette
+        <br>
+        AAAI 2023
+      </li>
+
+      <li>
         <a href="https://arxiv.org/pdf/2109.07818.pdf"><b>
         Learning logic programs through divide, constrain, and conquer</b></a>
         <br>
